# esp32_zigbee

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  flash-c6-com7.ps1  flash-c6-com8.ps1  flash-c6-com9.ps1  flash-monitor.ps1  idf-with-com3.ps1  idf-with-com7.ps1  monitor.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6
docs/: ejemplos_propios.txt  ejemplos_z2m.txt  operativa-logs-datos-ordenes.md  protocolo_websocket_esp32_homebridge_v2.docx  relación con mqtt.md  sensor-snzbd02-rejoin-conclusiones-2026-04-27.md  todo.txt  websocket_validation_checklist.md  zigbee-dispositivos-guia.md  zigbee-dispositivos-observaciones.md  zigbee-stack-coordinator-reference.md
homebridge-plugin/: README.md  config.schema.json  package-lock.json  package.json  tsconfig.json
homebridge-plugin/src/: accessory.ts  client.ts  index.ts  mdns.ts  model.ts  platform.ts
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  board_config.h  bridge_core.c  bridge_core.h  button_handler.c  button_handler.h  client_actions.c  client_actions.h  client_events.c  client_events.h  device_definition.c  device_definition.h  device_interview.c  device_interview.h  device_manager.c  device_manager.h  device_table.c  device_table.h  eth_driver.c  eth_driver.h  ethernet_link.cpp  ethernet_link.h  idf_component.yml  led_driver.c  led_driver.h  led_status.c  led_status.h  main.c  matter_bridge.cpp  matter_bridge.h  mqtt_bridge.c  mqtt_bridge.cpp  mqtt_bridge.h  mqtt_commands.c  mqtt_commands.h  mqtt_manager.c  mqtt_manager.h  (+36 more)
tools/homebridge_simulator/: README.md  pubspec.yaml
tools/homebridge_simulator/android/app/: build.gradle.kts
tools/homebridge_simulator/ios/Runner/: Info.plist
tools/homebridge_simulator/ios/Runner.xcodeproj/: project.pbxproj
tools/homebridge_simulator/lib/: main.dart
tools/homebridge_simulator/linux/: CMakeLists.txt
tools/homebridge_simulator/linux/runner/: my_application.cc
tools/homebridge_simulator/test/: widget_test.dart
tools/homebridge_simulator/web/: index.html  manifest.json
tools/homebridge_simulator/windows/: CMakeLists.txt
(+7 files in other folders)
